# fastapi-todo

./: pyproject.toml
fastapi_todo/: .env  main.py
tests/: test_main.py
